# rust-engine

./: Cargo.toml  index.mjs
.devcontainer/: devcontainer.json
derive_defaults/: Cargo.toml
derive_defaults/src/: lib.rs
src/: lib.rs  main.rs
src/attribute/: attribute.rs  attribute_container.rs  mod.rs
src/rule/: action.rs  condition.rs  context.rs  log_entry.rs  mod.rs  proposal.rs  variant.rs
src/rules/infrastructure/: attribute.rs  container.rs  error.rs  mod.rs  pool.rs  transaction.rs  utilities.rs
src/rules/infrastructure/ecs/: attribute.rs  container.rs  mod.rs  pool.rs  transaction.rs
src/ruleset/: mod.rs  response.rs  ruleset.rs
src/state/: board.rs  element.rs  mod.rs  player.rs  position.rs  state.rs  upgrade.rs
src/state/meta/: meta.rs  mod.rs  player.rs
src/util/: attribute.rs  attribute_impl.rs  attributes.rs  json_type_impl.rs  mod.rs
src/versions/: cold_war.rs  default_v3.rs  mod.rs
src/versions/common/: conditions.rs
