[package]
name = "derive_defaults"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.87"
syn = { version = "2.0.79",features = ["full"] }
quote = "1.0.8"
serde = { version = "1.0.210", features = ["derive", "std"], optional = true }

[features]
serialization = [ "dep:serde" ]

